[tool.poetry]
name = "pyqcf"
version = "0.2.0"
description = "Python helper modules for qcfinancial"
authors = ["Alvaro Diaz Valenzuela <alvaro@efaa.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
requests = "^2.31.0"
pydantic = "^2.5.2"
qcfinancial = "^0.5.1"
strenum = "^0.4.15"
pymongo = "^4.6.1"
fastapi = "^0.108.0"
keyring = "^24.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
